# https_ota_stm

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  main.c
main/include/: drive_ota.h  gpio.h  spiffs_mount.h  ssd1306.h  stm32_ota.h  sys_confg.h  uart.h  wifi_connect.h
main/src/: drive_ota.c  gpio.c  spiffs_mount.c  ssd1306.c  stm32_ota.c  uart.c  wifi_connect.c
spiffs_dir/: version.txt
